[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-ssm-metarl"
version = "0.1.0"
description = "Multi-Agent Framework for State Space Models with Meta-Reinforcement Learning"
authors = [{name = "sunghunkwag", email = "sunghunkwag@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["multi-agent", "meta-learning", "reinforcement-learning", "state-space-models", "AI"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gymnasium>=1.0.0",
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
mujoco = [
    "mujoco>=2.3.0",
    "gymnasium[mujoco]>=1.0.0",
]
all = [
    "multiagent-ssm-metarl[dev,mujoco]"
]

[project.urls]
Homepage = "https://github.com/sunghunkwag/MultiAgent-SSM-MetaRL"
"Bug Reports" = "https://github.com/sunghunkwag/MultiAgent-SSM-MetaRL/issues"
"Source" = "https://github.com/sunghunkwag/MultiAgent-SSM-MetaRL"
"Documentation" = "https://github.com/sunghunkwag/MultiAgent-SSM-MetaRL/docs"

[tool.setuptools.packages.find]
where = ["."]  
include = ["multi_agent*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]